--- a/util/job_launching/configs/define-standard-cfgs.yml
+++ b/util/job_launching/configs/define-standard-cfgs.yml
@@ -48,6 +48,14 @@ QV100_old:
 GTX480:
     base_file: "$GPGPUSIM_ROOT/configs/tested-cfgs/SM2_GTX480/gpgpusim.config"
 
+# Custom: RTX2070 Super (TU104)
+RTX2070_S:
+    base_file: "$GPGPUSIM_ROOT/configs/tested-cfgs/RTX2070_S/gpgpusim.config"
+
+# Custom: RTX2080 Super (TU104)
+RTX2080_S:
+    base_file: "$GPGPUSIM_ROOT/configs/tested-cfgs/RTX2080_S/gpgpusim.config"
+
 # To keep your configurations straight - we recommend specifying
 # If you are using SASS or PTX in the config:
 #   For example: QV100-SASS or QV100-PTX.
