--- a/util/tuner/RTX2080_S/gpgpusim.config
+++ b/util/tuner/RTX2080_S/gpgpusim.config
@@ -10,6 +10,7 @@
 -gpgpu_runtime_pending_launch_count_limit 2048
 -gpgpu_kernel_launch_latency 5000
 -gpgpu_TB_launch_latency 0
+-gpgpu_max_concurrent_kernel 128
 
 # Compute Capability
 -gpgpu_compute_capability_major 7
@@ -27,7 +28,7 @@
 
 # clock domains
 #-gpgpu_clock_domains <Core Clock>:<Interconnect Clock>:<L2 Clock>:<DRAM Clock>
--gpgpu_clock_domains 1605:1605:1605:3500.5
+-gpgpu_clock_domains 1605:1605:1605:3500
 
 # shader core pipeline config
 -gpgpu_shader_registers 65536
@@ -87,7 +88,7 @@
 # In adaptive cache, we adaptively assign the remaining shared memory to L1 cache 
 # For more info, see https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#shared-memory-7-x 
 -gpgpu_adaptive_cache_config 1
--gpgpu_shmem_option 0,8,16,32,64,64
+-gpgpu_shmem_option 32,64
 -gpgpu_unified_l1d_size 128
 # L1 cache configuration
 -gpgpu_l1_banks 4
@@ -110,11 +111,11 @@
 -gpgpu_coalesce_arch 75
 
 # L2 cache
--gpgpu_cache:dl2 S:512:128:16,L:B:m:L:X,A:192:4,32:0,32
+-gpgpu_cache:dl2 S:64:128:16,L:B:m:L:P,A:192:4,32:0,32
 -gpgpu_cache:dl2_texture_only 0
 -gpgpu_dram_partition_queues 64:64:64:64
 -gpgpu_perf_sim_memcpy 1
--gpgpu_memory_partition_indexing 2
+-gpgpu_memory_partition_indexing 0
 
 # 128 KB Inst.
 -gpgpu_cache:il1 N:64:128:16,L:R:f:N:L,S:2:48,4
@@ -146,8 +147,8 @@
 
 # dram model config
 -gpgpu_n_mem_per_ctrlr 1
--gpgpu_dram_buswidth 16
--gpgpu_dram_burst_length 2
+-gpgpu_dram_buswidth 2
+-gpgpu_dram_burst_length 16
 -dram_data_command_freq_ratio 2
 -gpgpu_mem_address_mask 1
 -gpgpu_mem_addr_mapping dramid@8;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCC.BCCSSSSS
