--- a/util/tuner/RTX2080_S/gpgpusim.config
+++ b/util/tuner/RTX2080_S/gpgpusim.config
@@ -77,7 +77,7 @@
 
 # warp scheduling
 -gpgpu_num_sched_per_core 4
--gpgpu_scheduler gto
+-gpgpu_scheduler lrr
 # a warp scheduler issue mode
 -gpgpu_max_insn_issue_per_warp 1
 -gpgpu_dual_issue_diff_exec_units 1
@@ -115,7 +115,7 @@
 -gpgpu_cache:dl2_texture_only 0
 -gpgpu_dram_partition_queues 64:64:64:64
 -gpgpu_perf_sim_memcpy 1
--gpgpu_memory_partition_indexing 2
+-gpgpu_memory_partition_indexing 0
 
 # 128 KB Inst.
 -gpgpu_cache:il1 N:64:128:16,L:R:f:N:L,S:2:48,4
@@ -151,7 +151,7 @@
 -gpgpu_dram_burst_length 16
 -dram_data_command_freq_ratio 4
 -gpgpu_mem_address_mask 1
--gpgpu_mem_addr_mapping dramid@8;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCC.BCCSSSSS
+-gpgpu_mem_addr_mapping dramid@8;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCB.CCCSSSSS
 
 # Mem timing 
 -gpgpu_dram_timing_opt nbk=16:CCD=4:RRD=13:RCD=26:RAS=61:RP=26:RC=87:CL=26:WL=9:CDLR=11:WR=26:nbkgrp=4:CCDL=7:RTPL=5
