Update configs similar to provided

--- a/util/tuner/RTX2070_S/gpgpusim.config
+++ b/util/tuner/RTX2070_S/gpgpusim.config
@@ -10,6 +10,7 @@
 -gpgpu_runtime_pending_launch_count_limit 2048
 -gpgpu_kernel_launch_latency 5000
 -gpgpu_TB_launch_latency 0
+-gpgpu_max_concurrent_kernel 128
 
 # Compute Capability
 -gpgpu_compute_capability_major 7
@@ -22,12 +23,12 @@
 # high level architecture configuration
 -gpgpu_n_clusters 40
 -gpgpu_n_cores_per_cluster 1
--gpgpu_n_mem 2
+-gpgpu_n_mem 16
 -gpgpu_n_sub_partition_per_mchannel 2
 
 # clock domains
 #-gpgpu_clock_domains <Core Clock>:<Interconnect Clock>:<L2 Clock>:<DRAM Clock>
--gpgpu_clock_domains 1605:1605:1605:3500.5
+-gpgpu_clock_domains 1605:1605:1605:3500
 
 # shader core pipeline config
 -gpgpu_shader_registers 65536
@@ -55,7 +56,7 @@
 -ptx_opcode_initiation_int 2,2,2,2,2
 -ptx_opcode_latency_fp 4,4,4,4,39
 -ptx_opcode_initiation_fp 2,2,2,2,4
--ptx_opcode_latency_dp 54,54,54,54,330
+-ptx_opcode_latency_dp 64,64,64,64,330
 -ptx_opcode_initiation_dp 64,64,64,64,130
 -ptx_opcode_latency_sfu 21
 -ptx_opcode_initiation_sfu 8
@@ -76,7 +77,7 @@
 
 # warp scheduling
 -gpgpu_num_sched_per_core 4
--gpgpu_scheduler gto
+-gpgpu_scheduler lrr
 # a warp scheduler issue mode
 -gpgpu_max_insn_issue_per_warp 1
 -gpgpu_dual_issue_diff_exec_units 1
@@ -87,8 +88,8 @@
 # In adaptive cache, we adaptively assign the remaining shared memory to L1 cache 
 # For more info, see https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#shared-memory-7-x 
 -gpgpu_adaptive_cache_config 1
--gpgpu_shmem_option 0,8,16,32,64,64
--gpgpu_unified_l1d_size 128
+-gpgpu_shmem_option 32,64
+-gpgpu_unified_l1d_size 96
 # L1 cache configuration
 -gpgpu_l1_banks 4
 -gpgpu_cache:dl1 S:4:128:64,L:T:m:L:L,A:256:32,16:0,32
@@ -110,11 +111,11 @@
 -gpgpu_coalesce_arch 75
 
 # L2 cache
--gpgpu_cache:dl2 S:512:128:16,L:B:m:L:X,A:192:4,32:0,32
+-gpgpu_cache:dl2 S:64:128:16,L:B:m:L:P,A:192:4,32:0,32
 -gpgpu_cache:dl2_texture_only 0
 -gpgpu_dram_partition_queues 64:64:64:64
 -gpgpu_perf_sim_memcpy 1
--gpgpu_memory_partition_indexing 2
+-gpgpu_memory_partition_indexing 0
 
 # 128 KB Inst.
 -gpgpu_cache:il1 N:64:128:16,L:R:f:N:L,S:2:48,4
@@ -137,7 +138,7 @@
 
 # memory partition latency config 
 -gpgpu_l2_rop_latency 187
--dram_latency 103
+-dram_latency 104
 
 # dram sched config
 -gpgpu_dram_scheduler 1
@@ -146,15 +147,15 @@
 
 # dram model config
 -gpgpu_n_mem_per_ctrlr 1
--gpgpu_dram_buswidth 16
--gpgpu_dram_burst_length 2
--dram_data_command_freq_ratio 2
+-gpgpu_dram_buswidth 2
+-gpgpu_dram_burst_length 16
+-dram_data_command_freq_ratio 4
 -gpgpu_mem_address_mask 1
--gpgpu_mem_addr_mapping dramid@8;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCC.BCCSSSSS
+-gpgpu_mem_addr_mapping dramid@8;00000000.00000000.00000000.00000000.0000RRRR.RRRRRRRR.RBBBCCCB.CCCSSSSS
 
 # Mem timing 
--gpgpu_dram_timing_opt nbk=16:CCD=1:RRD=32:RCD=109:RAS=256:RP=109:RC=365:CL=109:WL=16:CDLR=24:WR=94:nbkgrp=4:CCDL=16:RTPL=32
--dram_dual_bus_interface 1
+-gpgpu_dram_timing_opt nbk=16:CCD=4:RRD=12:RCD=24:RAS=55:RP=24:RC=78:CL=24:WL=8:CDLR=10:WR=24:nbkgrp=4:CCDL=6:RTPL=4
+-dram_dual_bus_interface 0
 
 # select lower bits for bnkgrp to increase bnkgrp parallelism
 -dram_bnk_indexing_policy 0
