--- a/util/tuner/RTX2080_S/gpgpusim.config
+++ b/util/tuner/RTX2080_S/gpgpusim.config
@@ -56,7 +56,7 @@
 -ptx_opcode_initiation_int 2,2,2,2,2
 -ptx_opcode_latency_fp 4,4,4,4,39
 -ptx_opcode_initiation_fp 2,2,2,2,4
--ptx_opcode_latency_dp 54,54,54,54,330
+-ptx_opcode_latency_dp 64,64,64,64,330
 -ptx_opcode_initiation_dp 64,64,64,64,130
 -ptx_opcode_latency_sfu 21
 -ptx_opcode_initiation_sfu 8
@@ -83,12 +83,12 @@
 -gpgpu_dual_issue_diff_exec_units 1
 
 ## L1/shared memory configuration
-# <nsets>:<bsize>:<assoc>,<rep>:<wr>:<alloc>:<wr_alloc>:<set_index_fn>,<mshr>:<N>:<merge>,<mq>:**<fifo_entry>
+# <sector?>:<nsets>:<bsize>:<assoc>,<rep>:<wr>:<alloc>:<wr_alloc>:<set_index_fn>,<mshr>:<N>:<merge>,<mq>:**<fifo_entry>
 # ** Optional parameter - Required when mshr_type==Texture Fifo
 # In adaptive cache, we adaptively assign the remaining shared memory to L1 cache 
 # For more info, see https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#shared-memory-7-x 
 -gpgpu_adaptive_cache_config 1
--gpgpu_shmem_option 0,8,16,32,64,64
+-gpgpu_shmem_option 32,64
 -gpgpu_unified_l1d_size 96
 # L1 cache configuration
 -gpgpu_l1_banks 4
